# TentOfTrials

./: TODO_AUDIT_REPORT.md
backend/: Cargo.toml
backend/src/ai/: embeddings.rs  mod.rs
backend/src/connector/: bridge.rs  ffi.rs  legacy.rs  mod.rs
backend/src/legacy/deprecations/: v1_compat.rs  v2_compat.rs  v3_compat.rs
backend/src/protocol/: mod.rs  serialize.rs
docs/openapi/: Generate.hs  Server.hs  Types.hs  Validate.hs
docs/openapi/Network/: Wai.hs
docs/openapi/Network/HTTP/: Types.hs
docs/openapi/Network/Wai/: Logger.hs
docs/openapi/Network/Wai/Handler/: Warp.hs
frontend/: tsconfig.tsbuildinfo
frontend/src/components/: AssetSelector.tsx  TradingChart.tsx
frontend/src/services/: telemetry.ts
frontend/src/utils/: dataService.ts
tools/: data_generator.py  health_check.py  log_aggregator.py
