[package]
name = "tent-backend"
version = "0.1.0"
edition = "2021"
description = "Tent of Trials - Backend Microservices Orchestration Framework"
authors = ["TentOfTrials"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
dashmap = "6"
parking_lot = "0.12"
bytes = "1"
regex = "1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1"
log = "0.4"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
debug = false
